--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CryptoCurrencyApp</string>
+    <string name="app_name">Crypto Currency</string>
     <string name="unexpected_error">Unexpected Error</string>
     <string name="no_internet_connection">No Internet Connection</string>
 </resources>
